Remove old sh files + fix a 'bug' where too long lines crashes the client because it tries loading too many chunks + start on messages

--- a/src/client/src/css/components.css
+++ b/src/client/src/css/components.css
@@ -220,6 +220,10 @@
 	background: #364350;
 }
 
+.error {
+	background:#6b3232;
+}
+
 .form-container a {
 	display:inline-block;
     margin-top: 1em;
